# brido

./: .gitignore  README.md  TROUBLESHOOTING.md  models.md
.github/workflows/: release.yml
brido_app/: README.md  settings.gradle.kts
brido_app/app/: brido-release-key.jks  build.gradle.kts
brido_app/app/release/: output-metadata.json
brido_app/app/release/baselineProfiles/0/: app-release.dm
brido_app/app/release/baselineProfiles/1/: app-release.dm
brido_app/app/src/androidTest/java/com/example/brido/: ExampleInstrumentedTest.kt
brido_app/app/src/main/: AndroidManifest.xml
brido_app/app/src/main/java/com/example/brido/: MainActivity.kt
brido_app/app/src/main/java/com/example/brido/models/: ApiModels.kt
brido_app/app/src/main/java/com/example/brido/navigation/: BridoNavigation.kt
brido_app/app/src/main/java/com/example/brido/network/: BridoApiService.kt  RetrofitClient.kt
brido_app/app/src/main/java/com/example/brido/screens/: ConnectionScreen.kt  QrScannerTab.kt  StreamScreen.kt  WelcomeScreen.kt
brido_app/app/src/main/java/com/example/brido/stream/: StreamManager.kt
brido_app/app/src/main/java/com/example/brido/ui/theme/: Color.kt  Theme.kt  Type.kt
brido_app/app/src/main/java/com/example/brido/viewmodel/: BridoViewModel.kt
brido_app/app/src/main/res/values/: strings.xml  themes.xml
brido_app/app/src/main/res/xml/: network_security_config.xml
brido_app/app/src/test/java/com/example/brido/: ExampleUnitTest.kt
brido_app/gradle/: libs.versions.toml
brido_app/gradle/wrapper/: gradle-wrapper.properties
brido_server/: .env.local.template  Cargo.toml  README.md
brido_server/src/: ai_client.rs  ai_server.rs  audio.rs  capture.rs  capture_gdi.rs  config.rs  encoder.rs  hotkey.rs  lib.rs  main.rs  model_manager.rs  server.rs  stealth.rs  stream_server.rs  tls.rs  tray.rs  voice_manager.rs  window.rs
brido_server/src/overlay/: capture_trigger.rs  hotkey.rs  main.rs  mod.rs  window.rs
brido_server/src/ui/: controls.rs  header.rs  mod.rs  qr_panel.rs  window.rs
frontend/: docs.css  docs.html  index.html  robots.txt  sitemap.xml  styles.css
release_assets/server/: README-server.md
scripts/: package_server_release.ps1
