[package]
name = "brido-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
scrap = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
local-ip-address = "0.6"
