[package]
name = "brido-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "brido_server"
path = "src/lib.rs"

[[bin]]
name = "brido"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
scrap = "0.5"
winapi = { version = "0.3", features = ["wingdi", "winuser", "windef", "minwindef"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
local-ip-address = "0.6"
dotenvy = "0.15"

# Audio
cpal = "0.15"
hound = "3.5"

# TLS
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# GUI
eframe = "0.31"
egui = "0.31"
qrcode = "0.14"
arboard = "3"
tray-icon = "0.19"

# Overlay stealth + hotkeys (Win32 APIs)
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
raw-window-handle = "0.6"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
